test/expected/show_foo.out
show foo
     ^
6: error: "foo": no such type defined via define, enum, struct, typedef, or union
